custom/dashboard-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kubernetes-dashboard
spec:
  hosts:
  - dashboard.k8s.test.com
  gateways:
  - dashboard-gateway
  tls:
  - match:
    - port: 443
      sniHosts:
      - dashboard.k8s.test.com
    route:
    - destination:
        host: kubernetes-dashboard
        port:
          number: 443
